--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="sign_in">Sign In</string>
     <string name="password">Password</string>
     <string name="e_mail">E-mail</string>
+    <string name="login">Login</string>
+    <string name="don_t_have_account">Don\'t have account?</string>
+    <string name="already_have_an_account">Already have an account?</string>
 </resources>
