--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">task-manager-android</string>
     <string name="log_in">Log In</string>
     <string name="sign_in">Sign In</string>
     <string name="password">Password</string>
     <string name="e_mail">E-mail</string>
     <string name="login">Login</string>
-    <string name="don_t_have_account">Don\'t have account?</string>
+    <string name="don_t_have_account" tools:ignore="StringEscaping">Don't have account?</string>
     <string name="already_have_an_account">Already have an account?</string>
+    <string name="sign_up">SIGN UP</string>
 </resources>
