--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="don_t_have_account" tools:ignore="StringEscaping">Don't have account?</string>
     <string name="already_have_an_account">Already have an account?</string>
     <string name="sign_up">SIGN UP</string>
+    <string name="username">Username</string>
 </resources>
