--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="already_have_an_account">Already have an account?</string>
     <string name="sign_up">SIGN UP</string>
     <string name="username">Username</string>
+    <string name="password_confirmation">Password Confirmation</string>
 </resources>
